# GuardEPI

./: .dockerignore  .env.vault  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TEST.py  compose.yml  end.json  main.py  myJsn.json  pyproject.toml  requirements  requirements.txt  sonar-project.properties
.github/: pull_request_template.md  upload-to-server.disabled
.github/workflows/: auto-assign.yml  deployPRD.yml  deployPREVIEW.yml  deployPREVIEW.yml.disabled  deploy_gcs.yml  deploy_ssh.yml  google-cloudrun-docker.yml  pull_requests.yml
app/: __init__.py  __main__.py  config.py  default_config.py
app/Forms/: __init__.py  auth.py  config.py  create.py  edit.py  epi.py  gestao.py  globals.py  groups.py  recovery.py  schedule_task.py
app/Forms/choices/: __init__.py
app/Forms/create/: __init__.py  epi.py  gestao.py  user.py
app/Forms/edit/: __init__.py  epi.py  gestao.py  user.py
app/decorators/: __init__.py
app/defaults/: __init__.py
app/forms/: config.py  epi.py  gestao.py  recovery.py
app/forms/choices/: __init__.py
app/logs/: setup.py
app/misc/: __init__.py  generate_doc.py
app/models/: EPI.py  Funcionários.py  __init__.py  users.py
app/models/EPI/: __init__.py  cautelas.py  equipamento.py  estoque.py  schedule_tasks.py
app/models/admissional/: __init__.py
app/routes/: __init__.py  config.py  dashboard.py  index.py  login.py  queue.py  terms_policy.py
app/routes/CRUD/: create.py  delete.py  miscs.py  update.py
app/routes/EPI/: __init__.py  categorias.py  cautela.py  cautelas.py  emitir_cautela.py  equipamentos.py  estoque.py  fornecedores.py  grade.py  grades.py  marcas.py  modelos.py
app/routes/EPI_old/: cautela.py  equipamentos.py  estoque.py  grades.py
app/routes/Gestao/: __init__.py  cargos.py  departamentos.py  empresas.py  funcionarios.py  set.py
app/routes/auth/: __init__.py
app/routes/cargos/: __init__.py
app/routes/config/: __init__.py  groups.py  perms.py  profile.py  roles.py  ruleset.py  users.py
app/routes/corporativo/: __init__.py  cargos.py  departamentos.py  empresas.py  funcionarios.py  setups.py
app/routes/dashboard/: __init__.py
app/routes/epi/: __init__.py  categorias.py  equipamentos.py  estoque.py  fornecedores.py  grade.py  marcas.py  modelos.py
app/routes/equipamentos/: __init__.py
app/routes/funcionarios/: __init__.py
app/routes/handler/: __init__.py
app/routes/home/: dashboard.py  login.py  queue.py  relatorio.py
app/routes/queue/: __init__.py  corporativo.py  grade.py  produto.py
app/routes/schedule_task/: __init__.py
app/routes/serving/: __init__.py
app/src/: form_content.html  index.html  login.html
app/src/assets/: body_email.html
app/tasks/: __init__.py
app/templates/: form_base.html  form_content.html  index.html  login.html
app/templates_root/: login.html
configs/: __init__.py  csp.json  read_me.md
foo/: foo-page-1-table-1.csv
src/: index.html
src/handler/: 401.html  404.html  500.html  index.html
src/includes/: add_groups.html  add_items.html  footer.html  message.html  show.html  show_pdf.html  show_pdf_copy.html  sidebar.html
src/js/: CautelasTable.js  EstoqueTable.js  FuncionariosTable.js  ImagePreview.js  format_moeda.js  scripts.js  setEdit.js
src/pages/: cargos.html  config_page.html  dashboard.html  departamentos.html  estoque.html  funcionarios.html
tests/: conftest.py  test_createapp.py
(+278 files in other folders)
