[project]
name = "guardepi"
version = "0.1.0"
description = ""
authors = [
    {name = "Robotz213",email = "nicholas@robotz.dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "cryptography (>=41.0.4)",
    "flask (>=3.1.1,<4.0.0)",
    "flask-mysqldb (>=2.0.0,<3.0.0)",
    "flask-mail (>=0.10.0,<0.11.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pypdf (>=5.6.1,<6.0.0)",
    "reportlab (>=4.4.2,<5.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "babel (>=2.17.0,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "requests (>=2.32.4,<3.0.0)",
    "flask-talisman (>=1.1.0,<2.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "deep-translator (>=1.11.4,<2.0.0)",
    "eventlet (>=0.40.1,<0.41.0)",
    "clear (>=2.0.0,<3.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "djlint (>=1.36.4,<2.0.0)",
    "pytest-cov (>=6.2.1,<7.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "quart-socketio @ git+https://github.com/Robotz213/Quart-SocketIO.git"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

